# SOL-Casino

./: LAMPORT_FIX_SUMMARY.md  PROJECT_PLAN.md  RUN_AND_TEST.md  package-lock.json
sol-casino/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
sol-casino/programs/sol-casino/: Cargo.toml
sol-casino/programs/sol-casino/src/: lib.rs
sol-casino/tests/: sol-casino.ts
sol-casino/ui/: README.md  RPC_FIX_SUMMARY.md  RPC_TROUBLESHOOTING.md  index.html  package.json  pnpm-lock.yaml
sol-casino/ui/public/: README.md
sol-casino/ui/src/: App.tsx  idl.json  index.css  main.tsx  pda.ts  solana.ts
