[package]
name = "sol-casino"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_casino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "no-idl"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

