[package]
name = "sol-casino"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_casino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "no-idl"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
# switchboard-v2 = "0.4.0"  # Commented out - not compatible with Anchor 0.30.1, add back when implementing VRF

